# cmmcmap

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
cmmcmap/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
cmmcmap/demos/02-deep/: SCENARIO.md  inventory.json
cmmcmap/tests/: test_deep.py
demos/: controls.json
demos/01-basic/: SCENARIO.md  stack.json
demos/01-defense-contractor-pre-audit/: SCENARIO.md  controls.json
demos/02-cui-handling-control-scope/: SCENARIO.md  controls.json
demos/03-small-prime-3-month-prep/: SCENARIO.md  controls.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_hardening.py  test_smoke.py
