[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-cmmcmap"
version = "0.1.0"
description = "CMMC Level 2 practice mapper — stack-aware SSP skeleton generator"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["federal", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/cmmcmap"

[project.scripts]
cmmcmap = "cmmcmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cmmcmap"]

[tool.ruff]
# The catalog and SSP strings are intentionally verbose; E501 is noisy here.
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
